@@ -10,9 +10,7 @@ requires        'URI';
 requires        'Encode';
 requires        'Email::Address';
 requires        'Term::ReadKey';
-requires        'Path::Class';
 requires        'Cwd';
-requires        'Hash::Merge';
 
 build_requires  'Test::More';
 build_requires  'Test::MockObject';
@@ -21,6 +19,11 @@ features(
     'Date loading' => [
         -default => 0,
        recommends( 'DateTime')
+    ],
+    'Cascading directory config' => [
+        -default => 0,
+        recommends('Hash::Merge'),
+        recommends('Path::Class'),
     ],
 );
 
